api to upload files added for avatar upload option
